--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/log.jpg" />
+    <link rel="icon" type="image/svg+xml" href="https://logos.textgiraffe.com/logos/logo-name/Kanika-designstyle-smoothie-m.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Girley Clothing</title>
+    <title>Kanika Play Hub</title>
   </head>
   <body>
     <div id="root"></div>
