--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <link rel="icon" type="image/svg+xml" href="https://logos.textgiraffe.com/logos/logo-name/Kanika-designstyle-smoothie-m.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kanika Play Hub</title>
+
+    <!-- Add this script tag to the head section of your public/index.html -->
+<script src="https://sdk.phonepe.com/sdk/v1/phonepe.min.js"></script>
+
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <!-- <script src="https://checkout.razorpay.com/v1/checkout.js"></script> -->
+
+    <!-- Add this in your index.html -->
+<!-- <script src="https://cdn.phonepe.com/phonepe/ui-sdk/2.0/js/phonepe.js"></script>
+
+<script src="https://cdn.phonepe.com/phonepe/ui-sdk/2.0/js/phonepe.js"></script> -->
+
+<!-- Add this script tag to the head section of your public/index.html -->
+<script src="https://sdk.phonepe.com/sdk/v1/phonepe.min.js"></script>
+
+
+
   </body>
 </html>
