--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <!-- <script src="https://checkout.razorpay.com/v1/checkout.js"></script> -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script> 
 
     <!-- Add this in your index.html -->
 <!-- <script src="https://cdn.phonepe.com/phonepe/ui-sdk/2.0/js/phonepe.js"></script>
@@ -21,7 +21,7 @@
 <script src="https://cdn.phonepe.com/phonepe/ui-sdk/2.0/js/phonepe.js"></script> -->
 
 <!-- Add this script tag to the head section of your public/index.html -->
-<script src="https://sdk.phonepe.com/sdk/v1/phonepe.min.js"></script>
+<!-- <script src="https://sdk.phonepe.com/sdk/v1/phonepe.min.js"></script> -->
 
 
 
